--- a/examples/ladder_vae.ipynb
+++ b/examples/ladder_vae.ipynb
@@ -11,12 +11,12 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import tensorbayes as tb\n",
-    "from tensorbayes.layers import Constant, Placeholder\n",
-    "from tensorbayes.layers import Dense, BatchNormalization\n",
+    "from tensorbayes.layers import constant, placeholder\n",
+    "from tensorbayes.layers import dense, batch_normalization\n",
     "from tensorbayes.layers import sample_gaussian\n",
-    "from tensorbayes.utils.nbutils import show_graph\n",
-    "from tensorbayes.utils.utils import progbar\n",
-    "from tensorbayes.distributions import Bernoulli, Normal"
+    "from tensorbayes.utils import show_graph\n",
+    "from tensorbayes.utils import progbar\n",
+    "from tensorbayes.distributions import normal_log_pdf, bernoulli_log_pdf"
    ]
   },
   {
@@ -83,9 +83,9 @@
    "source": [
     "def layer(x, size, scope, bn=True, activation=None):\n",
     "    with tf.variable_scope(scope):\n",
-    "        h = Dense(x, size, scope='dense')()\n",
+    "        h = dense(x, size, scope='dense')\n",
     "        if bn:\n",
-    "            h = BatchNormalization(h, phase, scope='bn')()\n",
+    "            h = batch_normalization(h, phase, scope='bn')\n",
     "        if activation is not None:\n",
     "            h = activation(h)\n",
     "        return h\n",
@@ -137,8 +137,8 @@
    "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
-    "phase = Placeholder(None, tf.bool, name='phase')()\n",
-    "x = Placeholder((None, 784), name='x')()\n",
+    "phase = placeholder(None, tf.bool, name='phase')\n",
+    "x = placeholder((None, 784), name='x')\n",
     "with tf.name_scope('z0'):\n",
     "    z0 = tf.cast(tf.greater(x, tf.random_uniform(tf.shape(x), 0, 1)), tf.float32)\n",
     "\n",
@@ -147,20 +147,20 @@
     "z2_like = encode_block(z1_like[0], 256, 32, idx=2)\n",
     "z3_like = encode_block(z2_like[0], 128, 16, idx=3)\n",
     "# Decode.\n",
-    "z3_prior = (Constant(0)(), Constant(1)())\n",
+    "z3_prior = (constant(0), constant(1))\n",
     "z3, z3_post, z2_prior = decode_block(z3_like, None, 128, 32, idx=3)\n",
     "z2, z2_post, z1_prior = decode_block(z2_like, z2_prior, 256, 64, idx=2)\n",
     "z1, z1_post, z0_logits = decode_block(z1_like, z1_prior, 512, 784, idx=1)\n",
     "\n",
     "with tf.name_scope('loss'):\n",
     "    with tf.name_scope('recon'):\n",
-    "        recon = -Bernoulli(z0_logits).log_pdf(z0)\n",
+    "        recon = -bernoulli_log_pdf(z0, z0_logits)\n",
     "    with tf.name_scope('kl1'):\n",
-    "        kl1   = -Normal(*z1_prior).log_pdf(z1) + Normal(*z1_post).log_pdf(z1)\n",
+    "        kl1   = -normal_log_pdf(z1, *z1_prior) + normal_log_pdf(z1, *z1_post)\n",
     "    with tf.name_scope('kl2'):\n",
-    "        kl2   = -Normal(*z2_prior).log_pdf(z2) + Normal(*z2_post).log_pdf(z2)\n",
+    "        kl2   = -normal_log_pdf(z2, *z2_prior) + normal_log_pdf(z2, *z2_post)\n",
     "    with tf.name_scope('kl3'):\n",
-    "        kl3   = -Normal(*z3_prior).log_pdf(z3) + Normal(*z3_post).log_pdf(z3)\n",
+    "        kl3   = -normal_log_pdf(z3, *z3_prior) + normal_log_pdf(z3, *z3_post)\n",
     "    loss  = recon + kl1 + kl2 + kl3"
    ]
   },
@@ -181,11 +181,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "lr = Placeholder(None, name='lr')()\n",
+    "lr = placeholder(None, name='lr')\n",
     "update_ops = tf.get_collection(tf.GraphKeys.UPDATE_OPS)\n",
     "with tf.control_dependencies(update_ops):\n",
     "    # Ensures that we execute the update_ops before performing the train_step\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -215,7 +215,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[=====================================             ]  74%"
+      "[1, 227.50777, 226.16895]\n",
+      "[2, 161.21005, 160.13354]\n"
      ]
     }
    ],
